files, bib adds working on frontend.

--- a/FileSyncDesktop/FileSyncDesktop.csproj
+++ b/FileSyncDesktop/FileSyncDesktop.csproj
@@ -104,6 +104,9 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Collections\BibRecordCollection.cs" />
     <Compile Include="Collections\FileListCollection.cs" />
+    <Compile Include="Collections\IBibRecordCollection.cs" />
+    <Compile Include="Helpers\FileDataProcessor.cs" />
+    <Compile Include="Helpers\IFileDataProcessor.cs" />
     <Compile Include="Helpers\ILogger.cs" />
     <Compile Include="Models\BibRecord.cs" />
     <Compile Include="Models\IFileWatcherSettings.cs" />
