Add record logger to output posted bib reports.

--- a/FileSyncAPI/FileSyncAPI.csproj
+++ b/FileSyncAPI/FileSyncAPI.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Received-Bib-Reports.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
