--- a/FileSyncDesktop/packages.config
+++ b/FileSyncDesktop/packages.config
@@ -4,10 +4,11 @@
   <package id="Caliburn.Micro" version="3.2.0" targetFramework="net472" />
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="7.0.1" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net472" />
