--- a/FileSyncDesktop.Library/FileSyncDesktop.Library.csproj
+++ b/FileSyncDesktop.Library/FileSyncDesktop.Library.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Api\BibReportEndpoint.cs" />
     <Compile Include="Api\IAPIHelper.cs" />
     <Compile Include="Api\IBibReportEndpoint.cs" />
-    <Compile Include="Helpers\BibRecords.cs" />
+    <Compile Include="Helpers\BibRecordModels.cs" />
     <Compile Include="Models\BibRecordModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
